[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
enigo = { git = "https://github.com/LeeeSe/enigo", branch = "add-macos-smooth-scroll", features = [
    "platform_specific",
] }
dirs = "6.0.0"
hidapi = "2.6.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"


[dev-dependencies]
tempfile = "3.0"
